<resources>
    <string name="app_name">FitHub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_message">"Welcome to Trainee!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="routines_message">Routines</string>
    <string name="ejercicios_message">Exercises</string>
    <string name="my_routines_message">My Routines</string>
    <string name="edit_message">Edit</string>
    <string name="routine_name">Routine Name</string>
    <string name="routine_description">Routine Description</string>
    <string name="add_routine">Add Routine</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="save">Save</string>
    <string name="exercises_message">Exercises</string>
    <string name="all">All</string>
    <string name="no_routines">The user has no routines</string>
    <string name="search_exercises">Search exercises</string>
    <string name="select_exercises">Select exercises</string>
    <string name="no_exercises">The user has no exercises</string>
    <string name="entrenamiento_message">Training</string>
    <string name="save_exercises">Save Exercises</string>
    <string name="new_record">New Record</string>
    <string name="save_new_record">Save New Record</string>
    <string name="cancel">Cancel</string>
    <string name="new_name">New Name</string>
    <string name="new_description">New Description</string>
    <string name="exercise_twodots">Exercise:</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_weight">Weight (kg)</string>
    <string name="exercise_reps">Repetitions</string>
    <string name="exercise_completed">Completed</string>
    <string name="add_set">Add Set</string>
    <string name="exercise_icon">Exercise Icon</string>
    <string name="routine_icon">Routine Icon</string>
    <string name="start_training">Start Training</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="set">Set</string>
    <string name="delete">Delete</string>
    <string name="exercises_added">Exercises added:</string>
    <string name="save_set">Save Set</string>
    <string name="training">Training</string>
    <string name="delete_training">Delete Training</string>
    <string name="no_training">No trainings available</string>
    <string name="trainings">Trainings</string>
</resources>