<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editRutinaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routine_name" />

    <EditText
        android:id="@+id/editRutinaDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/routine_description"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonAddEjercicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_exercises"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewEjerciciosAnadidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercises_added"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp" />
</LinearLayout>