<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Título del Ejercicio -->
    <TextView
        android:id="@+id/textEjercicioNombreEntrenamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Fila de cabecera con nombres de columna -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textEjercicioNombreEntrenamiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Columna de Peso -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_weight"
            android:gravity="center"
            android:textStyle="bold" />

        <!-- Columna de Repeticiones -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_reps"
            android:gravity="center"
            android:textStyle="bold" />

<<<<<<< Updated upstream
        <!-- Columna de Completado -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercise_completed"
            android:gravity="center"
            android:textStyle="bold" />

=======
>>>>>>> Stashed changes
    </LinearLayout>

    <!-- RecyclerView para las Series -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <!-- Botón para añadir una serie -->
    <Button
        android:id="@+id/buttonAddSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< Updated upstream
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/add_set"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
=======
        android:layout_marginTop="8dp"
        android:text="Añadir Serie"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewSeries"
>>>>>>> Stashed changes
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>